/ was added in the end of homepage address.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "herolo_weather",
-  "homepage": "https://Yehuda-Volodin.github.io/herolo_weather",
+  "homepage": "https://Yehuda-Volodin.github.io/herolo_weather/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
